noinst_LTLIBRARIES = libdb.la

KDE_CFLAGS = -w
	 
libdb_la_CFLAGS = -I$(top_builddir)/bdb/build_unix -I$(top_srcdir)/bdb/include -D_REENTRANT -D_GNU_SOURCE -ansi -D_XOPEN_SOURCE=500 -D_BSD_SOURCE -DNDEBUG -fPIC

libdb_la_LDFLAGS = $(LIBPTHREAD)

libdb_la_SOURCES = db/db_upg.c \
db/db.c \
db/db_vrfy.c \
db/db_dispatch.c \
db/db_overflow.c \
db/db_method.c \
db/crdel_rec.c \
db/db_iface.c \
db/db_vrfyutil.c \
db/db_upg_opd.c \
db/crdel_auto.c \
db/db_auto.c \
db/db_conv.c \
db/db_reclaim.c \
db/db_join.c \
db/db_meta.c \
db/db_cam.c \
db/db_dup.c \
db/db_am.c \
db/db_rec.c \
db/db_ret.c \
db/db_pr.c \
mp/mp_fget.c \
mp/mp_region.c \
mp/mp_fput.c \
mp/mp_fset.c \
mp/mp_bh.c \
mp/mp_method.c \
mp/mp_stat.c \
mp/mp_sync.c \
mp/mp_fopen.c \
mp/mp_register.c \
mp/mp_trickle.c \
mp/mp_alloc.c \
os/os_abs.c \
os/os_dir.c \
os/os_fid.c \
os/os_map.c \
os/os_alloc.c \
os/os_handle.c \
os/os_tmpdir.c \
os/os_open.c \
os/os_root.c \
os/os_seek.c \
os/os_spin.c \
os/os_stat.c \
os/os_rpath.c \
os/os_region.c \
os/os_sleep.c \
os/os_errno.c \
os/os_rename.c \
os/os_method.c \
os/os_finit.c \
os/os_unlink.c \
os/os_rw.c \
os/os_fsync.c \
os/os_oflags.c \
xa/xa.c \
xa/xa_map.c \
xa/xa_db.c \
dbm/dbm.c \
env/db_shash.c \
env/env_recover.c \
env/env_open.c \
env/db_salloc.c \
env/env_region.c \
env/env_method.c \
log/log_findckp.c \
log/log_archive.c \
log/log.c \
log/log_get.c \
log/log_put.c \
log/log_rec.c \
log/log_auto.c \
log/log_register.c \
log/log_method.c \
log/log_compare.c \
qam/qam_upgrade.c \
qam/qam_files.c \
qam/qam.c \
qam/qam_verify.c \
qam/qam_auto.c \
qam/qam_conv.c \
qam/qam_open.c \
qam/qam_stat.c \
qam/qam_rec.c \
qam/qam_method.c \
txn/txn_region.c \
txn/txn.c \
txn/txn_rec.c \
txn/txn_auto.c \
hash/hash_verify.c \
hash/hash_auto.c \
hash/hash_conv.c \
hash/hash.c \
hash/hash_func.c \
hash/hash_meta.c \
hash/hash_page.c \
hash/hash_method.c \
hash/hash_stat.c \
hash/hash_reclaim.c \
hash/hash_upgrade.c \
hash/hash_dup.c \
hash/hash_rec.c \
lock/lock_deadlock.c \
lock/lock_region.c \
lock/lock_method.c \
lock/lock.c \
lock/lock_conflict.c \
lock/lock_stat.c \
lock/lock_util.c \
btree/bt_split.c \
btree/bt_rsearch.c \
btree/bt_method.c \
btree/bt_put.c \
btree/bt_rec.c \
btree/btree_auto.c \
btree/bt_conv.c \
btree/bt_compare.c \
btree/bt_open.c \
btree/bt_curadj.c \
btree/bt_cursor.c \
btree/bt_stat.c \
btree/bt_reclaim.c \
btree/bt_recno.c \
btree/bt_upgrade.c \
btree/bt_search.c \
btree/bt_verify.c \
btree/bt_delete.c \
mutex/mutex.c \
mutex/mut_pthread.c \
common/db_byteorder.c \
common/db_log2.c \
common/db_getlong.c \
common/db_err.c \
hsearch/hsearch.c 
