##
## Do NOT remove the comments that start with "kdevelop:"
## They are actually directives to the kdevelop plugin system
##
## The include_xxxx variables are controlled by configure.in.in
##

#kdevelop: VISUALBOYADVANCE_SUBDIR = visualboyadvance
if include_vba
VISUALBOYADVANCE_SUBDIR = visualboyadvance
endif

SUBDIRS = $(VISUALBOYADVANCE_SUBDIR)